2004-04-07  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* Ever so many fixes for the new Sh.

2004-04-04  Michael McCool <mmccool@uwaterloo.ca>
	* src/JeweledShader.cpp:
	a complex "hero" shader that uses three brdfs, a specular map,
	material mapping, and environment mapping.   Lots of fun parameters.
	However, discovered two problems:
	  - Lack of a default constructor with no arguments leads to
	    problems when allocating textures in arrays.   Tried to fix
	    by providing default sizes in sh, but this leads to problems
	    with trait wrappers.   Added 1D, 2D, 3D versions of trait
	    wrappers as a temporary fix, but I don't like it.  Will have
	    to revisit this part of the design.
	  - There is a bug with the initialization of output attributes
	    modified with read-write-modify (i.e. +=); they don't seem
	    to be getting initialized to zero properly.   Of course this
	    means a hidden temporary is introduced, probably IT is not
	    being initialized properly.

2004-03-25  Bryan Chan <b8chan@uwaterloo.ca>
	* src/AlgebraShader.cpp:
	  Added demo of algebra (note: this generates *lots* of subshaders,
    so it might be a good idea to disable it by default in Makefile.am)
	 
2004-03-18  Bryan Chan <b8chan@uwaterloo.ca>
	* src/EdgeGooch.cpp: Added Gooch w sillhouette shader.
	
2004-03-15  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeFrame.cpp: Add a menu item to change the background colour.

	* src/ShrikeCanvas.cpp (setBackground): Allow the background
	colour to be changed.

	* src/UniformPanel.cpp (setShader): Allow the user to change textures.

2004-03-11  Bryan Chan  <b8chan@uwaterloo.ca>
	* src/NoiseShader.cpp: Moved shdemo over to shrike.
	
2004-03-11  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeFrame.cpp (setShader): Use firstTimeInit() here
	instead of initializing everything in initShaderList(). This cuts
	down the startup time a lot.

	* src/Shader.cpp (firstTimeInit): Implement firstTimeInit(), which